--- a/index.html
+++ b/index.html
@@ -76,7 +76,12 @@
 </head>
 <body>
     <div class="calculator">
-        <h2>💰 Калькулятор цены отсрочки</h2>
+        <h2 style="color: #333; text-align: center; margin-bottom: 10px; font-size: 28px;">
+    💰 Цена бездействия
+</h2>
+<p style="color: #e53935; text-align: center; font-style: italic; margin-bottom: 30px; font-size: 18px;">
+    Чем дольше думаете, тем больше платите
+</p>
         
         <div class="input-group">
             <label>Ежемесячный взнос (руб):</label>
