--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 </head>
 <body>
     <div class="calculator">
-        <h2 style="color: #333; text-align: center; margin-bottom: 10px; font-size: 28px;">
+       <h2 style="color: #333; text-align: center; margin-bottom: 10px; font-size: 28px;">
     💰 Цена бездействия
 </h2>
-<p style="color: #e53935; text-align: center; font-style: italic; margin-bottom: 30px; font-size: 18px;">
-    Чем дольше думаете, тем больше платите
+<p style="color: #800020; text-align: center; margin-bottom: 30px; font-size: 18px; font-weight: bold; line-height: 1.4;">
+    Бедность — это привычка откладывать решения, а не деньги
 </p>
         
         <div class="input-group">
