--- a/index.html
+++ b/index.html
@@ -59,10 +59,71 @@
             background: #f8f9fa;
             font-weight: bold;
         }
-        .loss {
-            color: #e53935;
-            font-weight: bold;
-        }
+        <style>
+    body { 
+        font-family: Arial, sans-serif;
+        max-width: 600px;
+        margin: 20px auto;
+        padding: 20px;
+        background: #f5f5f5;
+    }
+    .calculator {
+        background: white;
+        padding: 25px;
+        border-radius: 10px;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    .input-group {
+        margin: 20px 0;
+    }
+    label {
+        display: block;
+        margin-bottom: 8px;
+        font-weight: bold;
+        color: #333;
+    }
+    input {
+        width: 100%;
+        padding: 12px;
+        font-size: 16px;
+        border: 2px solid #ddd;
+        border-radius: 8px;
+        box-sizing: border-box;
+    }
+    input:focus {
+        border-color: #4CAF50;
+        outline: none;
+    }
+    .result {
+        background: #e8f5e8;
+        padding: 20px;
+        margin: 25px 0;
+        border-radius: 8px;
+        border-left: 4px solid #4CAF50;
+    }
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin: 15px 0;
+    }
+    th, td {
+        padding: 12px 15px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+    }
+    th {
+        background: #f8f9fa;
+        font-weight: bold;
+    }
+    .loss {
+        color: #800020;
+        font-weight: bold;
+    }
+    .profit {
+        color: #4CAF50;
+        font-weight: bold;
+    }
+</style>
         .profit {
             color: #4CAF50;
             font-weight: bold;
