--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Калькулятор финансовых потерь</title>
+    <title>Цена бездействия</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body { 
@@ -59,90 +59,24 @@
             background: #f8f9fa;
             font-weight: bold;
         }
-        <style>
-    body { 
-        font-family: Arial, sans-serif;
-        max-width: 600px;
-        margin: 20px auto;
-        padding: 20px;
-        background: #f5f5f5;
-    }
-    .calculator {
-        background: white;
-        padding: 25px;
-        border-radius: 10px;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    .input-group {
-        margin: 20px 0;
-    }
-    label {
-        display: block;
-        margin-bottom: 8px;
-        font-weight: bold;
-        color: #333;
-    }
-    input {
-        width: 100%;
-        padding: 12px;
-        font-size: 16px;
-        border: 2px solid #ddd;
-        border-radius: 8px;
-        box-sizing: border-box;
-    }
-    input:focus {
-        border-color: #4CAF50;
-        outline: none;
-    }
-    .result {
-        background: #e8f5e8;
-        padding: 20px;
-        margin: 25px 0;
-        border-radius: 8px;
-        border-left: 4px solid #4CAF50;
-    }
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        margin: 15px 0;
-    }
-    th, td {
-        padding: 12px 15px;
-        text-align: left;
-        border-bottom: 1px solid #ddd;
-    }
-    th {
-        background: #f8f9fa;
-        font-weight: bold;
-    }
-    .loss {
-        color: #800020;
-        font-weight: bold;
-    }
-    .profit {
-        color: #4CAF50;
-        font-weight: bold;
-    }
-</style>
+        .loss {
+            color: #800020;
+            font-weight: bold;
+        }
         .profit {
             color: #4CAF50;
             font-weight: bold;
-        }
-        h2 {
-            color: #333;
-            text-align: center;
-            margin-bottom: 30px;
         }
     </style>
 </head>
 <body>
     <div class="calculator">
-       <h2 style="color: #333; text-align: center; margin-bottom: 10px; font-size: 28px;">
-    💰 Цена бездействия
-</h2>
-<p style="color: #800020; text-align: center; margin-bottom: 30px; font-size: 18px; font-weight: bold; line-height: 1.4;">
-    Бедность — это привычка откладывать решения, а не деньги
-</p>
+        <h2 style="color: #333; text-align: center; margin-bottom: 10px; font-size: 28px;">
+            💰 Цена бездействия
+        </h2>
+        <p style="color: #800020; text-align: center; margin-bottom: 30px; font-size: 18px; font-weight: bold; line-height: 1.4;">
+            Бедность — это привычка откладывать решения, а не деньги
+        </p>
         
         <div class="input-group">
             <label>Ежемесячный взнос (руб):</label>
