--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             💰 Цена бездействия
         </h2>
         <p style="color: #800020; text-align: center; margin-bottom: 30px; font-size: 18px; font-weight: bold; line-height: 1.4;">
-            Бедность — это привычка откладывать решения, а не деньги
-        </p>
+    Бедность — это привычка откладывать решения,<br>а не деньги
+</p>
         
         <div class="input-group">
             <label>Ежемесячный взнос (руб):</label>
