--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Цена бездействия</title>
+ <title>Светлана Вандакурова · Цена бездействия</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body { 
@@ -70,6 +70,12 @@
     </style>
 </head>
 <body>
+    <div style="text-align: right; margin: -10px 0 15px 0;">
+   <a href="https://t.me/finsveta"
+       style="color: #800020; text-decoration: none; font-size: 15px; font-weight: bold;">
+        Светлана Вандакурова
+    </a>
+</div>
     <div class="calculator">
         <h2 style="color: #333; text-align: center; margin-bottom: 10px; font-size: 28px;">
             💰 Цена бездействия
@@ -117,7 +123,12 @@
                     <td id="loss5" class="loss">0 руб</td>
                 </tr>
             </table>
-        </div>
+        </div><div style="text-align: center; margin-top: 25px; padding-top: 20px; border-top: 1px solid #eee; color: #666; font-size: 14px;">
+    Создано с ❤️ · 
+   <a href="https://t.me/finsveta" style="color: #800020; text-decoration: none;">
+        @finsveta
+    </a>
+</div>
     </div>
 
     <script>
