--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 </head>
 <body>
     <div style="text-align: right; margin: -10px 0 15px 0;">
-   <a href="https://t.me/finsveta"
-       style="color: #800020; text-decoration: none; font-size: 15px; font-weight: bold;">
-        Светлана Вандакурова
-    </a>
+   <a href="https://t.me/genrosta"
+   style="color: #800020; text-decoration: none; font-size: 15px; font-weight: bold;">
+    Светлана Вандакурова
+</a>
 </div>
     <div class="calculator">
         <h2 style="color: #333; text-align: center; margin-bottom: 10px; font-size: 28px;">
