--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
     <div style="text-align: right; margin: -10px 0 15px 0;">
    <a href="https://t.me/genrosta"
-   style="color: #800020; text-decoration: none; font-size: 15px; font-weight: bold;">
+   style="color: #3498db; text-decoration: none; font-size: 15px; font-weight: bold;">
     Светлана Вандакурова
 </a>
 </div>
@@ -125,9 +125,9 @@
             </table>
         </div><div style="text-align: center; margin-top: 25px; padding-top: 20px; border-top: 1px solid #eee; color: #666; font-size: 14px;">
     Создано с ❤️ · 
-   <a href="https://t.me/finsveta" style="color: #800020; text-decoration: none;">
-        @finsveta
-    </a>
+  <a href="https://t.me/finsveta" style="color: #3498db; text-decoration: none;">
+    @finsveta
+</a>
 </div>
     </div>
 
